<resources>
    <string name="app_name">CIS Flower Shop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_share">Share!</string>
    <string name="action_photo">Take a Picture!</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_social">Social Media</string>
    <string name="menu_customer">Customer</string>
    <string name="menu_customers">Customers</string>
    <string name="menu_customer_find">Find Customer</string>
    <string name="menu_contact">Add Contact</string>
    <string name="customer_details">Customer Details</string>

    <string name="about_intro">Since 1998 CIS Flower Shop has been the go-to destination for beautiful flower arrangements in Regina. </string>
    <string name="about_information">You can find us here:</string>
    <string name="about_email">flowers@cisflowershop.com</string>
    <string name="about_address">1377 Hamilton Street</string>
    <string name="about_city_prov">Regina, Saskatchewan</string>
    <string name="about_postal">S4S 1S1</string>
    <string name="about_phone">306-555-1234</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_feedback_fragment">Rate this App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>